Added a test variation for the issue